@@ -995,6 +995,7 @@ scid-4.3
 	* Header search with ignore colours: colours were obeyed for the results (thanks to Gerd Lohrscheid)
 	* Allow suppression of Abort/Adjourn/Draw/Takeback requests on FICS (thanks to Jose Joao Morais)
 	* Reorder piece sets alphabetically
+	* Allow the informant value for "won game" to count up to "mate found" (= 327)
 - Language updates:
 	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
 	* nederland translation (thanks to Leander Laruelle)
